# bevy_ios_review

./: CHANGELOG.md  Package.swift  justfile  readme.md
.github/: FUNDING.yml
Sources/bevy_ios_review/: bevy_ios_review.m
Sources/bevy_ios_review/include/: bevy_ios_review.h  module.map.modulemap
Tests/bevy_ios_nativeTests/: bevy_ios_nativeTests.swift
Tests/bevy_ios_reviewTests/: bevy_ios_reviewTests.swift
rust/bevy_ios_review/: Cargo.toml  justfile
rust/bevy_ios_review/src/: lib.rs  native.rs
