[package]
name = "bevy_ios_review"
version = "0.2.0"
edition = "2021"
readme = "../../readme.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_ios_review"
repository = "https://github.com/rustunit/bevy_ios_review"
keywords = ["bevy", "gamedev", "mobile", "ios", "swift"]
description = "Bevy plugin for to request ios native review API from within the App"

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_winit"] }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
