[package]
name = "bevy_ios_review"
version = "0.5.0"
edition = "2024"
readme = "../../readme.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_ios_review"
repository = "https://github.com/rustunit/bevy_ios_review"
keywords = ["bevy", "gamedev", "mobile", "ios", "swift"]
description = "Bevy plugin for to request ios native review API from within the App"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_log",
] }
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
